--- a/src/app/homepage/pages/techniques/sql/sql.component.html
+++ b/src/app/homepage/pages/techniques/sql/sql.component.html
@@ -63,7 +63,7 @@ $ npm install --save @nestjs/typeorm typeorm mysql</code></pre>
   <pre><code class="language-typescript">{{ photoEntity }}</code></pre>
   <p>
     The <code>Photo</code> entity belongs to the <code>photo</code> directory. This directory represents the <code>PhotoModule</code>.
-    It's your decision where you gonna keep your model files. From our point of view, the best way's to hold them nearly
+    It's your decision where you gonna keep your model files. From our point of view, the best way to hold them is keeping them near
     their <strong>domain</strong>, in the corresponding module directory.
   </p>
   <p>
